--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "httpserverwithhttpmodule",
+  "name": "node-server-study",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -18,9 +18,13 @@
   },
   "homepage": "https://github.com/2021Bong/httpServerWithHttpModule#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
-    "nodemon": "^2.0.19"
+    "mysql": "^2.18.1",
+    "mysql2": "^3.2.0",
+    "nodemon": "^2.0.19",
+    "typeorm": "^0.3.12"
   }
 }
