--- a/package.json
+++ b/package.json
@@ -4,11 +4,17 @@
    "description": "Awesome project developed with TypeORM.",
    "type": "commonjs",
    "devDependencies": {
-      "@types/node": "^16.11.10",
+      "@types/cors": "^2.8.13",
+      "@types/dotenv": "^8.2.0",
+      "@types/express": "^4.17.17",
+      "@types/node": "^16.18.23",
       "ts-node": "10.7.0",
       "typescript": "4.5.2"
    },
    "dependencies": {
+      "cors": "^2.8.5",
+      "dotenv": "^16.0.3",
+      "express": "^4.18.2",
       "mysql": "^2.14.1",
       "reflect-metadata": "^0.1.13",
       "typeorm": "0.3.14"
