--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
    "description": "Awesome project developed with TypeORM.",
    "type": "commonjs",
    "devDependencies": {
+      "@types/body-parser": "^1.19.2",
       "@types/cors": "^2.8.13",
       "@types/dotenv": "^8.2.0",
       "@types/express": "^4.17.17",
@@ -12,6 +13,7 @@
       "typescript": "4.5.2"
    },
    "dependencies": {
+      "body-parser": "^1.20.2",
       "cors": "^2.8.5",
       "dotenv": "^16.0.3",
       "express": "^4.18.2",
