--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
    "dependencies": {
       "body-parser": "^1.20.2",
       "cors": "^2.8.5",
+      "deepl-node": "^1.10.2",
       "dotenv": "^16.0.3",
       "express": "^4.18.2",
       "mysql": "^2.14.1",
